# backend

./: README.md  pyproject.toml  tailwind.config.js
.github/workflows/: ci-cd.yaml
src/deltahacks_backend/: __main__.py
src/tai/: __main__.py  models.py
static/: styles.css
templates/: assignments.jinja2  base.jinja2  content.jinja2  course-list.jinja2  course.jinja2  courseSpecifics.jinja2  grade.jinja2  index.jinja2
templates/components/: chat-message.jinja2  chat.jinja2
