[project]
name = "deltahacks-backend"
version = "0.0.0"
description = "Our DeltaHacks X backend."
authors = [{ name = "Vidhan Bhatt", email = "me@vidhan.io" }]
dependencies = [
    "fastapi>=0.109.0",
]
readme = "README.md"
requires-python = ">= 3.12"
classifiers = ["Private :: Do Not Upload"]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = ["pyright>=1.1.344", "ruff>=0.1.11", "pytest>=7.4.4"]

    [tool.rye.scripts]
    "project" = { call = "deltahacks_project" }

    "test" = { cmd = "pytest" }

    "check" = { chain = ["check:code", "check:types", "check:format"] }
    "check:code" = { cmd = "ruff check" }
    "check:types" = { cmd = "pyright" }
    "check:format" = { cmd = "ruff format --check" }

    "format" = { cmd = "ruff format" }

[tool.pyright]
typeCheckingMode = "strict"

[tool.hatch]
    [tool.hatch.metadata]
    allow-direct-references = true

    [tool.hatch.build.targets.wheel]
    packages = ["src/deltahacks_project"]
