[project]
name = "tai"
version = "0.0.0"
description = "Our DeltaHacks X backend."
authors = [{ name = "Vidhan Bhatt", email = "me@vidhan.io" }]
readme = "README.md"
requires-python = ">= 3.12"
classifiers = ["Private :: Do Not Upload"]

dependencies = [
    "jinja2>=3.1.3",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.25.0",
    "python-multipart>=0.0.6",
    "cohere>=4.42",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pyright>=1.1.344",
    "ruff>=0.1.11",
    "pytest>=7.4.4",
    "djlint>=1.34.1",
]

    [tool.rye.scripts]
    "watch-css" = { cmd = "tailwindcss -i styles.input.css -o static/styles.css -w" }
    "dev" = { cmd = "uvicorn src.tai.__main__:app --reload" }

    "test" = { cmd = "pytest" }

    "check" = { chain = ["check:code", "check:types", "check:format"] }
    "check:code" = { cmd = "ruff check" }
    "check:types" = { cmd = "pyright" }
    "check:format" = { cmd = "ruff format --check" }

    "format" = { cmd = "ruff format" }

[tool.ruff]
extend-select = ["ANN"]

[tool.pyright]
typeCheckingMode = "strict"

[tool.hatch]
    [tool.hatch.metadata]
    allow-direct-references = true

    [tool.hatch.build.targets.wheel]
    packages = ["src/tai"]
